# C

./: CMakeLists.txt
Class_works/class_work_1/: main.cpp
Class_works/class_work_2/: main.cpp
Class_works/class_work_4/: main.cpp
Class_works/class_work_5/: main.cpp
Project_1(first homework)/Problem_4/: main.cpp
Project_1/Problem_2/: main.cpp
Project_10(end)/: end_1.cpp  end_2.cpp
Project_2/: Functions.h  lab.cpp  task_1.py  task_2.py  task_2_v2.py  task_3.py  task_3_a.py  task_3_b.py  test.py
Project_2(lab 1)/: Functions.h  task_1.py  task_2.py  task_3_a.py  task_3_b.py
Project_2(lab 1)/Additional_task_1/: Functions.h
Project_2(lab 1)/Additional_task_2/: Functions.h  main.cpp
Project_2/Additional_task_1/: main.cpp
Project_3(class works)/class_work_1/: main.cpp
Project_3(class works)/class_work_2/: main.cpp
Project_3(class works)/class_work_3/: main.cpp
Project_3(class works)/class_work_4/: main.cpp
Project_3(lab 2)/1/: main.cpp
Project_3(lab 2)/task_1/: main.cpp
Project_3/class_work/: main.cpp
Project_3/class_work_2/: main.cpp
Project_3/class_work_3/: main.cpp
Project_4(sorting)/: heap_sort.cpp  quick_sort.cpp
Project_4(sortings)/: main.cpp
Project_5(tasks with pointers and structs)/task_1(single list)/: SingleList.h  main.cpp
Project_5(tasks with pointers and structs)/task_2(double list)/: DoubleList.h  main.cpp
Project_5(tasks with pointers and structs)/task_3(stack)/: Stack.h  main.cpp
Project_5(tasks with pointers and structs)/task_4(queue)/: Queue.h
Project_6(tasks with greedy algorithms)/task_1/: main.cpp
Project_6(tasks with greedy algorithms)/task_2/: main.cpp
Project_6(tasks with greedy algorithms)/task_3/: main.cpp
Project_6(tasks with greedy algorithms)/task_4/: main.cpp
Project_6(tasks with greedy algorithms)/task_5/: main.cpp
Project_6(tasks with greedy algorithms)/task_6/: main.cpp
Project_6(tasks with pointers and structs)/: main.cpp
Project_6(tasks with pointers and structs)/task_1(single list)/: main.cpp
Project_6(tasks with pointers and structs)/task_2(double list)/: main.cpp
Project_6(tasks with pointers and structs)/task_4(queue)/: main.cpp
Project_7(tasks with dynamic programming)/: task_1(contest).cpp  task_1.cpp  task_2(contest).cpp  task_2.cpp  task_3(contest).cpp  task_4(contest).cpp
Project_8(stack tasks)/: task_1.cpp
Project_9(tree tasks)/: task_1.cpp
