cmake_minimum_required(VERSION 3.21)
project(C)

set(CMAKE_CXX_STANDARD 14)

add_executable("Project_1_Problem_2"
        "Project_1/Problem_2/main.cpp"
        )

add_executable("Project_1_Problem_4"
        "Project_1/Problem_4/main.cpp"
        )

add_executable("lab_1"
        "Project_2(lab 1)/lab.cpp"
        )

add_executable("c_w_1"
        "Project_3(class works)/class_work_1/main.cpp"
        )

add_executable("c_w_2"
        "Project_3(class works)/class_work_2/main.cpp"
        )

add_executable("lab_1_add_1"
        "Project_2(lab 1)/Additional_task_1/main.cpp"
        )

add_executable("lab_1_add_2"
        "Project_2(lab 1)/Additional_task_2/main.cpp"
        )

add_executable("c_w_3"
        "Project_3(class works)/class_work_3/main.cpp"
        )

add_executable("c_w_4"
        "Project_3(class works)/class_work_4/main.cpp"
        )

add_executable("lab_2"
        "Project_4(lab 2)/1/main.cpp"
        )

add_executable("sorting"
        "Project_5(sorting)/main.cpp"
)
