cmake_minimum_required(VERSION 3.21)
project(C)

set(CMAKE_CXX_STANDARD 14)

add_executable("Project_1_Problem_2"
        "Project_1(first homework)/Problem_2/main.cpp"
        )

add_executable("Project_1_Problem_4"
        "Project_1(first homework)/Problem_4/main.cpp"
        )

add_executable("lab_1"
        "Project_2(lab 1)/lab.cpp"
        )

add_executable("c_w_1"
        "Class_works/class_work_1/main.cpp"
        )

add_executable("c_w_2"
        "Class_works/class_work_2/main.cpp"
        )

add_executable("lab_1_add_1"
        "Project_2(lab 1)/Additional_task_1/main.cpp"
        )

add_executable("lab_1_add_2"
        "Project_2(lab 1)/Additional_task_2/main.cpp"
        )

add_executable("c_w_3"
        "Class_works/class_work_3/main.cpp"
        )

add_executable("c_w_4"
        "Class_works/class_work_4/main.cpp"
        )

add_executable("c_w_5"
        "Class_works/class_work_5/main.cpp"
        )

add_executable("lab_2"
        "Project_3(lab 2)/task_1/main.cpp"
        )

add_executable("sorting"
        "Project_4(sortings)/main.cpp"
)

add_executable("pointers_and_structs_1"
        "Project_5(tasks with pointers and structs)/task_1(single list)/main.cpp")

add_executable("pointers_and_structs_2"
        "Project_5(tasks with pointers and structs)/task_2(double list)/main.cpp")

add_executable("pointers_and_structs_3"
        "Project_5(tasks with pointers and structs)/task_3(stack)/main.cpp")

add_executable("pointers_and_structs_4"
        "Project_5(tasks with pointers and structs)/task_4(queue)/main.cpp")