cmake_minimum_required(VERSION 3.21)
project(C)

set(CMAKE_CXX_STANDARD 17)

add_executable("Project_1_Problem_2"
        "Project_1(first homework)/Problem_2/main.cpp")

add_executable("Project_1_Problem_4"
        "Project_1(first homework)/Problem_4/main.cpp")

add_executable("lab_1"
        "Project_2(lab 1)/lab.cpp")

add_executable("c_w_1"
        "Class_works/class_work_1/main.cpp")

add_executable("c_w_2"
        "Class_works/class_work_2/main.cpp")

add_executable("lab_1_add_1"
        "Project_2(lab 1)/Additional_task_1/main.cpp")

add_executable("lab_1_add_2"
        "Project_2(lab 1)/Additional_task_2/main.cpp")

add_executable("c_w_3"
        "Class_works/class_work_3/main.cpp")

add_executable("c_w_4"
        "Class_works/class_work_4/main.cpp")

add_executable("c_w_5"
        "Class_works/class_work_5/main.cpp")

add_executable("lab_2"
        "Project_3(lab 2)/task_1/main.cpp")

add_executable("head_sort"
        "Project_4(sorting)/heap_sort.cpp")

add_executable("quick_sort"
        "Project_4(sorting)/quick_sort.cpp")

add_executable("pointers_and_structs_1"
        "Project_5(tasks with pointers and structs)/task_1(single list)/main.cpp")

add_executable("pointers_and_structs_2"
        "Project_5(tasks with pointers and structs)/task_2(double list)/main.cpp")

add_executable("pointers_and_structs_3"
        "Project_5(tasks with pointers and structs)/task_3(stack)/main.cpp")

add_executable("pointers_and_structs_4"
        "Project_5(tasks with pointers and structs)/task_4(queue)/main.cpp")

add_executable("greedy_1"
        "Project_6(tasks with greedy algorithms)/task_1/main.cpp")

add_executable("greedy_2"
        "Project_6(tasks with greedy algorithms)/task_2/main.cpp")

add_executable("greedy_3"
        "Project_6(tasks with greedy algorithms)/task_3/main.cpp")

add_executable("greedy_4"
        "Project_6(tasks with greedy algorithms)/task_4/main.cpp")

add_executable("greedy_5"
        "Project_6(tasks with greedy algorithms)/task_5/main.cpp")

add_executable("greedy_6"
        "Project_6(tasks with greedy algorithms)/task_6/main.cpp")

add_executable("dynamic_1"
        "Project_7(tasks with dynamic programming)/task_1.cpp")

add_executable("dynamic_2"
        "Project_7(tasks with dynamic programming)/task_2.cpp")

add_executable("dynamic_1c"
        "Project_7(tasks with dynamic programming)/task_1(contest).cpp")

add_executable("dynamic_2c"
        "Project_7(tasks with dynamic programming)/task_2(contest).cpp")

add_executable("dynamic_3c"
        "Project_7(tasks with dynamic programming)/task_3(contest).cpp")

add_executable("dynamic_4c"
        "Project_7(tasks with dynamic programming)/task_4(contest).cpp")